--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           </li>
           <li class="htb__card aos-init aos-animate" data-aos="fade-left" data-aos-delay="100" data-aos-duration="500">
             <div class="htb__card__icon">
-              <h3>Vanshaj Sharma(CTO)</h3>
+              <h3>Azela(CTO)</h3>
               <p>Specialized PHP, Python, HTML, CSS</p>
               <p>Media Relations</p>
               <p>Cyber Security Specialist</p>
